[gd_scene load_steps=11 format=2]

[ext_resource path="res://Triceratops/Triceratops.gd" type="Script" id=1]
[ext_resource path="res://Triceratops/assets/triceratops1.svg" type="Texture" id=2]
[ext_resource path="res://Triceratops/assets/triceratops2.svg" type="Texture" id=3]
[ext_resource path="res://Triceratops/assets/triceratops_eat1.svg" type="Texture" id=4]
[ext_resource path="res://Triceratops/assets/triceratops_eat2.svg" type="Texture" id=5]
[ext_resource path="res://Triceratops/assets/triceratops_eat3.svg" type="Texture" id=6]
[ext_resource path="res://Triceratops/assets/triceratops_eat4.svg" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "eat",
"speed": 5.0
} ]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -231.2, 40.1, -28, 0.5, 28, -0.5, -201.7, 13.1, 0, 0, 0, 0, -81.1999, 27.6 )
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 21.6
height = 78.4003

[node name="Triceratops" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 1 )
animation = "eat"

[node name="EatPath" type="Path2D" parent="."]
position = Vector2( -17.7587, -2.68333 )
scale = Vector2( 0.756666, 1.16667 )
z_index = -1
curve = SubResource( 4 )

[node name="EatArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EatArea"]
position = Vector2( -136, 27.5 )
rotation = 1.5708
z_index = -1
shape = SubResource( 3 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
